@@ -4,10 +4,3 @@ dependencies {
   api "cn.taketoday:infra-core"
 
 }
-
-compileJava {
-  options.compilerArgs += [
-      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
-  ]
-}
-
